fixes scrolling with open modals on iOS Safari

--- a/style.scss
+++ b/style.scss
@@ -38,6 +38,11 @@
   text-align: center;
 }
 
+html {
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+
 html,
 body {
   box-sizing: border-box;
@@ -158,7 +163,6 @@ button,
   &.w1 {
     width: 100%;
   }
-
 
   &.auto-size-xs {
     @media only screen and (max-width: 768px) {
@@ -486,7 +490,7 @@ form {
   position: relative;
   z-index: 0;
 
-  +p {
+  + p {
     position: relative;
     z-index: 2;
   }
